package.json update

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://reymanov.github.io/firechat/",
+  "homepage": "https://reymanov.github.io/firechat",
   "name": "firechat",
   "version": "0.1.0",
   "private": true,
